@@ -3,6 +3,7 @@ CHANGELOG
 Future Version
 =======
 -Breaking: printVersion task not automatically applied. Use addPrintVersionTask() to do so
+-Breaking: 'fullVersion' property from FlexVersion object is gone
 
 0.4.0
 =======
